2008-06-17  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/header.c (header_readline): Revert yesterday's change.

2008-06-16  Sergey Poznyakoff  <gray@gnu.org.ua>

	* auth/ldap.c (chk_sha): Remove useless return.
	* mailbox/header.c (mu_hdrent_find_stream_pos): Check for
	hrd->tail != NULL.
	(header_readline): Return immediately if header size is 0.

2008-06-03  Sergey Poznyakoff  <gray@gnu.org.ua>

	* auth/radius.c (mu_grad_logger): New function.
	(mu_radius_module_init): Install a custom logger function.

2008-05-31  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libproto/include/amd.h (struct _amd_message.has_new_msg): New
	field.
	* mailbox/amd.c (amd_append_message): Cache information about
	mailbox size in file .mu-size.
	(make_size_file_name, read_size_file, write_size_file): New
	functions.
	(amd_expunge, amd_sync): Update size cache file.
	(amd_get_size): Use size cache file if no mailbox_size method is
	provided. 
	* mailbox/mbx_default.c (mu_normalize_mailbox_url): Accept `='
	suffix for all mailbox types.
	* movemail/movemail.c (main): Call mu_mailbox_sync before closing
	destination mailbox.

2008-05-28  Sergey Poznyakoff  <gray@gnu.org.ua>

	* lib/Makefile.am (libmuaux_la_SOURCES): Add userprivs.c.
	* lib/userprivs.c: New file.
	* lib/muaux.h (mu_switch_to_privs): New prototype.

	* libproto/include/amd.h (_amd_data.msg_finish_delivery): Pass
	original message as the 3rd argument.
	* libproto/maildir/mbox.c (maildir_msg_finish_delivery): Take
	original message as the 3rd argument.
	Use message attributes to select the subdirectory to place it
	into.
	* mailbox/amd.c (amd_append_message): Pass original message as the
	3rd argument to msg_finish_delivery.

	* mailbox/filter_trans.c (SOFTBRK): Remove unused macro.

	* movemail/movemail.c: New option --copy-permissions (-P).

2008-04-07  Sergey Poznyakoff  <gray@gnu.org.ua>

	Implement compilation of Sieve sources from the memory.
	
	* include/mailutils/libsieve.h (mu_sieve_compile_buffer): New
	function.